turtle pic added

--- a/genetic_algorithm.ipynb
+++ b/genetic_algorithm.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "id": "a51bd6ac",
    "metadata": {},
    "outputs": [
@@ -106,7 +106,8 @@
       "3                                               None                                                  \n",
       "4                                               None                                                  \n",
       "\n",
-      "[5 rows x 24 columns]\n"
+      "[5 rows x 24 columns]\n",
+      "['AE', 'BCS', 'BS', 'BTM', 'BiS', 'CBE', 'CE', 'CH', 'CS', 'CTP', 'EE', 'HSS', 'ID', 'IE', 'IP', 'MAS', 'ME', 'MS', 'MSE', 'NQE', 'PH', 'SS', 'STP', 'TS']\n"
      ]
     }
    ],
@@ -132,7 +133,16 @@
     "\n",
     "print(\"----------------------------------\")\n",
     "print(\"You imported %d courses.\" % len(KAIST_courses))\n",
-    "print(KAIST_courses.head())"
+    "print(KAIST_courses.head())\n",
+    "\n",
+    "deps = set()\n",
+    "for course_no in KAIST_courses['Course No.']:\n",
+    "    if course_no[2] == ' ':\n",
+    "        deps.add(course_no[:2])\n",
+    "    else:\n",
+    "        deps.add(course_no[:3])\n",
+    "deps = sorted(list(deps))\n",
+    "print(deps)"
    ]
   },
   {
